kubernetes/apps/base/tools/ntfy/service.yaml
# ntfy LoadBalancer Service
#
# Static IP via Cilium L2 LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: tools
  labels:
    app.kubernetes.io/name: ntfy
  annotations:
    io.cilium/lb-ipam-ips: "${IP_NTFY}"
spec:
  type: LoadBalancer
  loadBalancerIP: "${IP_NTFY}"
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: ntfy
